--- a/src/assets/css/variables.scss
+++ b/src/assets/css/variables.scss
@@ -3,8 +3,9 @@ $color-primary: #3256E3;
 $color-secondary: #000000;
 $color-background: #FFFFFF;
 $color-error: #DB524E;
+$color-white: #FCFCFF;
 $color-gray: #E6EAF5;
-$color-light-gray: #FCFCFF;
+$color-light-gray: #F3F5F9;
 $color-dark-gray: #929BBC;
 
 // Device breakpoints
