--- a/src/assets/css/styles.scss
+++ b/src/assets/css/styles.scss
@@ -12,6 +12,10 @@ body {
   background: $color-background;
 }
 
+button {
+  font-family: 'Poppins', 'Arial', sans-serif;
+}
+
 h1 {
   font-size: 56px;
   line-height: 64px;
